services/network-latency/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: network-latency

spec:
  replicas: 1

  selector:
    matchLabels:
      app: network-latency

  template:
    metadata:
      labels:
        app: network-latency

    spec:
      containers:
      - name: network-latency
        image: mykaelhunter/network-latency:latest

        ports:
        - containerPort: 8000
