services/network-latency/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: network-latency

spec:
  selector:
    app: network-latency

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
