services/network-latency/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: network-latency

spec:

  rules:

  - host: network-latency.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: network-latency

            port:

              number: 80
